# belugas

./: .gitignore  API_COVERAGE.md  CONTRIBUTING.md  LICENSE.md  MISSING_SQLGLOT.md  README.md  ROADMAP.md  analysis.md  pyproject.toml
.github/instructions/: documentation.md  pql_instructions.instructions.md
scripts/: __init__.py  __main__.py  _benchmark.py  _check_missing_sqlglot.py  _utils.py
scripts/comparator/: _infos.py  _main.py  _parse.py  _rules.py  _text.py
scripts/fn_generator/: _format.py  _query.py  _rules.py  _schemas.py  _sections.py
scripts/meta_generator/: _main.py
src/belouga/: __init__.py  _core.py  _expr.py  _fns.py  _frame.py  _funcs.py  _meta.py  _scans.py  _sqlglot_patch.py  _when.py  datatypes.py  namespaces.py  selectors.py  typing.py  utils.py
src/belugas/: __init__.py  _core.py  _expr.py  _frame.py  _joins.py  _meta.py  _parser.py  _pivots.py  _scans.py  _show.py  _sqlglot_patch.py  _window.py  datatypes.py  namespaces.py  selectors.py  typing.py
src/belugas/_plan/: __init__.py  _group_by.py  _meta.py  _optimize.py  _resolve.py  _selects.py  _unique.py  nodes.py  scans.py
src/belugas/_plan/ops/: _explode.py  _filters.py  _group_by.py  _joins.py  _pivots.py  _selects.py  _slice.py  _sort.py  _unique.py  _unnest.py
src/pql/: __init__.py  _expr.py  _frame.py  _funcs.py  _groupby.py  _joins.py  _meta.py  _namespaces.py  _parser.py  _scans.py  _schema.py  _sqlglot_patch.py  _when.py  _window.py  datatypes.py  meta.py  namespaces.py  selectors.py  typing.py  utils.py
src/pql/_code_gen/: __init__.py  _fns.py
src/pql/sql/: __init__.py  _conversions.py  _core.py  _expr.py  _funcs.py  _meta.py  _scans.py  _sqlglot_patch.py  _when.py  _window.py  datatypes.py  namespaces.py  selectors.py  typing.py
src/pql/sql/_code_gen/: _fns.py
tests/: _data.py  _utils.py  test_aliases.py  test_arr_namespace.py  test_complex_qry.py  test_conversions.py  test_datatypes.py  test_dt_namespace.py  test_exprs.py  test_files.py  test_funcs.py  test_integration.py  test_lazyframe.py  test_lazyframe_joins.py  test_lazyframe_pivots.py  test_lazygroupby.py  test_list_namespace.py  test_meta.py  test_name_namespace.py  test_selectors.py  test_slots.py  test_str_namespace.py  test_struct_namespace.py
tests/data/: foo.parquet
